<resources>
    <string name="app_name">Quick Fixins</string>
    <string name="random_recipe_button_label">Random Recipe</string>
    <string name="saved_recipes_button_label">My Saved Recipes</string>
    <string name="backend_base_url">http://quick-fixins.glitch.me/</string>
    <string name="backend_all_valid_ids_path">v1/getValidIDs</string>
    <string name="backend_upcheck_path">v1/up</string>
    <string name="backend_get_by_id_path">v1/getRecipeById</string>
    <string name="backend_rate_recipe_path">v1/rateRecipe</string>
    <string name="backend_insert_recipe_path">/v1/addRecipe</string>
    <string name="backend_get_multiple_by_id_path">/v1/getRecipesByIds</string>
    <string name="recipe_id_intent_message">com.ethosgames.quickfixins.RECIPE_ID</string>
    <string name="recipe_name_intent_message">com.ethosgames.quickfixins.RECIPE_NAME</string>
    <string name="recipe_ingredients_intent_message">com.ethosgames.quickfixins.RECIPE_INGREDIENTS</string>
    <string name="recipe_steps_intent_message">com.ethosgames.quickfixins.RECIPE_STEPS</string>
    <string name="recipe_image_desc">Image for the recipe</string>
    <string name="add_image_desc">Add image icon</string>
    <string name="plus_icon_desc">Plus icon</string>
    <string name="minus_icon_desc">Minus icon</string>
    <string name="heart_icon_desc">Heart icon</string>
    <string name="very_dissatisfied_icon_desc">Very dissatisfied face icon</string>
    <string name="dissatisfied_icon_desc">Dissatisfied face icon</string>
    <string name="neutral_icon_desc">Neutral face icon</string>
    <string name="satisfied_icon_desc">Satisfied face icon</string>
    <string name="very_satisfied_icon_desc">Very satisfied face icon</string>
    <string name="menu_image_desc">Menu image</string>
    <string name="empty_plate_image_desc">Empty plate image</string>
    <string name="ingredients_heading">Ingredients</string>
    <string name="steps_heading">Steps</string>
    <string name="saved_recipes_file_path">savedRecipes.txt</string>
    <string name="rated_recipes_file_path">ratedRecipes.txt</string>
    <string name="rate_recipe_button_label">Made it? Rate it!</string>
    <string name="already_rated_recipe_button_label">Thanks for rating!</string>
    <string name="ease_rating_text">Easiness of recipe</string>
    <string name="taste_rating_text">Tastiness of recipe</string>
    <string name="rating_dialog_submit_button_label">Submit Rating</string>
    <string name="rating_dialog_cancel_button_label">Cancel</string>
    <string name="ease_rating_intent_tag">easeRating</string>
    <string name="taste_rating_intent_tag">tasteRating</string>
    <string name="recipe_name_hint_text">Name</string>
    <string name="recipe_ingredient_hint_text">Ingredient</string>
    <string name="recipe_step_hint_text">Step</string>
    <string name="toolbar_create_new_title">Create new recipe</string>
    <string name="toolbar_saved_recipes_title">Saved recipes</string>
    <string name="toolbar_random_recipe_title">Random recipe</string>
    <string name="new_recipe_toolbar_title">New recipe</string>
    <string name="save_recipe_button_label">Save recipe</string>
    <string name="save_recipe_disabled_button_label">Adding recipe...</string>
    <string name="recipe_insert_server_failure">Sorry, there was an error saving your recipe</string>
    <string name="saved_recipe_list_activity_title">My Saved Recipes</string>
    <string name="loading_recipe">Loading next recipe...</string>
    <string name="loading_saved_recipes">Loading your saved recipes...</string>
    <string name="no_saved_recipes">You don\'t have any saved recipes yet!</string>
    <string name="recipe_rate_server_failure">Sorry, there was an error submitting your rating</string>
</resources>
