<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    tools:context=".SingleRecipeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_scrollFlags="scroll|enterAlways" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/page_margin_horizontal_sides"
            android:layout_marginTop="@dimen/page_margin_vertical_sides"
            android:layout_marginRight="@dimen/page_margin_horizontal_sides"
            android:layout_marginBottom="@dimen/page_margin_vertical_sides"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/recipePrimaryImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/recipe_info_elements_margin"
                android:adjustViewBounds="true"
                android:contentDescription="@string/recipe_image_desc"
                app:srcCompat="@drawable/image_not_found" />

            <TextView
                android:id="@+id/ingredientsHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients_heading"
                android:textColor="@color/colorText"
                android:textSize="24sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recipeIngredients"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/recipe_info_elements_margin"
                android:layout_marginBottom="@dimen/recipe_info_elements_margin">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/stepsHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steps_heading"
                android:textColor="@color/colorText"
                android:textSize="24sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recipeSteps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/recipe_info_elements_margin"
                android:layout_marginBottom="@dimen/recipe_info_elements_margin" />

            <android.support.design.button.MaterialButton
                android:id="@+id/rateDialogOpen"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:enabled="true"
                android:gravity="center|center_horizontal|center_vertical"
                android:onClick="openRatingDialog"
                android:text="@string/rate_recipe_button_label"
                android:translationZ="2dp" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabRemix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:theme="@style/SecondaryFAB"
        app:layout_anchor="@+id/fabPlaceholder"
        app:layout_anchorGravity="top"
        app:srcCompat="@drawable/open_in_new" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabPlaceholder"
        android:layout_width="@dimen/padding_between_fabs"
        android:layout_height="@dimen/padding_between_fabs"
        android:layout_gravity="top|end"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="false"
        android:visibility="invisible"
        app:layout_anchor="@+id/fabLike"
        app:layout_anchorGravity="top" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:onClick="toggleSavedStatus"
        app:layout_anchor="@+id/nestedScrollView"
        app:layout_anchorGravity="end|bottom"
        app:srcCompat="@drawable/favorite" />

</android.support.design.widget.CoordinatorLayout>